--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Micober",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mongodb": "^3.0.10",
     "react": "^16.4.1",
